# InkSlate

./: .gitignore  README.md  sdkconfig  sdkconfig.old
components/adafruit_busio/: CMakeLists.txt
components/adafruit_gfx/: CMakeLists.txt
components/gxepd2/: CMakeLists.txt
components/gxepd2/src/: CMakeLists.txt
main/: CMakeLists.txt  arduino_main.cpp  ble_ancs.c  ble_ancs_demo.c  idf_component.yml  notification_queue.c  notification_queue.h
